--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,10 +7,13 @@ body
     margin:0;
     padding: 0;
 }
-#container
+#cabecera
 {
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0,5);
+    color: white;
     width: 70%;
-    padding: 1em;
+    padding: 0.5em;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
